--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -83,6 +83,7 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  background-color: #7a7171 !important;
 }
 
 .card:hover,
